Change files in the server

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,22 +2,14 @@
 #################################
 #Playbook of Hosts linux file update#
 #################################
-- name: Hosts file update
-  hosts: awshpcnodes
-  tasks:
-    - name: Transfer the script
-      copy: 
-        src: /../../roles/update-host-file/files/ 
-        dest: /tmp 
-        mode: 0755
+- name: Transfer the script
+  copy: 
+    src: /etc/ansible/roles/update-host-file/files/ 
+    dest: /tmp 
+    mode: 0755
 
-    - name: Execute the script
-      command: sh /tmp/add-ipnodes-hosts.sh
+- name: Execute the script
+  shell: sudo cd /tmp && sudo sh /tmp/add-ipnodes-hosts.sh
    
-    - name: Ansible delete multiple file example
-      file:
-        path: "{{ item }}"
-        state: absent
-      with_items:
-        - add-ipnodes-hosts.sh
-        - node-ip.txt
+- name: Ansible delete multiple file example
+  shell: sudo rm -rf /tmp/add-ipnodes-hosts.sh && sudo rm -rf /tmp/node-ip.txt 
