--- a/update-host-file.yml
+++ b/update-host-file.yml
@@ -1,4 +1,8 @@
 ---
-- hosts:
+- hosts: awshpcnodes
+  connection: ssh
+  remote_user: ec2-user
+  become: yes
+  become_user: root
   roles:
     - role: update-host-file
